--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <div class="brand">
       <div class="logo">MR</div>
       <div>
-        <h1>MovieRatings</h1>
-        <div class="small">Verified movie ratings — Firebase-powered</div>
+        <h1>Movie Ratings</h1>
+        <div class="small">Verified Movie Ratings</div>
       </div>
     </div>
 
@@ -78,14 +78,14 @@
   <main class="left">
     <div class="card">
       <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
-        <strong>Add / find a movie</strong>
-        <small class="small">Live shared ratings — stored in Firebase</small>
+        <strong>Add / Find a Movie</strong>
+        <small class="small">Live shared ratings</small>
       </div>
 
       <div class="controls" role="group" aria-label="movie controls">
         <input type="search" id="searchInput" placeholder="Search titles..." />
         <input type="text" id="newTitle" placeholder="Movie title (required)" />
-        <input type="text" id="newYear" placeholder="Year (optional)" style="width:90px" />
+        <input type="text" id="newYear" placeholder="Year (optional)" />
         <button id="addMovieBtn">Add / Select</button>
       </div>
 
@@ -158,18 +158,18 @@
     <div style="height:12px"></div>
 
     <div class="card">
-      <strong>Admin hints</strong>
+      <strong>Additional Information</strong>
       <div style="height:8px"></div>
       <ul class="small" style="margin:0;padding-left:18px">
-        <li>Open Firebase Console → Realtime Database → Data to view stored movies & ratings.</li>
-        <li>To mark verified users, add an entry under <code>/verifiedUsers/{uidOrSafeEmail}: true</code>.</li>
-        <li>To restrict writes later, update Realtime Database rules and require auth.</li>
+        <li>Something</li>
+        <li>Some code: <code>hello world</code>.</li>
+        <li>Something</li>
       </ul>
     </div>
   </aside>
 
   <footer>
-    Built with Firebase Realtime DB • Data stored live • Sign in required to rate
+    © 2025 Movie Ratings • All Rights Reserved
   </footer>
 </div>
 
