--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
   footer{grid-column:1 / -1;text-align:center;margin-top:12px;color:var(--muted);font-size:13px}
   .badge{background:rgba(255,255,255,0.06);padding:4px 8px;border-radius:999px;font-weight:700;font-size:12px;color:#d9f7ff}
   @media (max-width:980px){.wrap{grid-template-columns:1fr;padding:12px}.right{order:3}}
+
+  #reviewsList {
+  margin-top:8px;
+  display:flex;
+  flex-direction:column;
+  gap:6px;
+}
 </style>
 </head>
 <body>
@@ -108,36 +115,38 @@
     <div style="height:12px"></div>
 
     <div class="card" id="selectedCard" aria-hidden="true" style="display:none">
-      <strong id="selectedTitle">Selected</strong>
-      <div class="small" id="selectedSubtitle">Movie info</div>
-      <div style="height:12px"></div>
+  <strong id="selectedTitle">Selected</strong>
+  <div class="small" id="selectedSubtitle">Movie info</div>
+  <div style="height:12px"></div>
 
-      <div style="display:flex;gap:8px;align-items:center;margin-bottom:8px">
-        <div class="small">Signed in as:</div>
-        <div id="signedInAs" class="pill" style="padding:6px 10px;background:rgba(255,255,255,0.03);border-radius:999px"></div>
-      </div>
+  <div id="reviewsList"></div>
+  <div style="height:12px"></div>
 
-      <div style="display:flex;gap:8px;align-items:center;margin-bottom:10px">
-        <div class="small">Your rating:</div>
-        <div id="ratingStars" class="stars" role="radiogroup" aria-label="Rating stars"></div>
-        <div style="flex:1"></div>
-        <button id="submitRatingBtn">Submit</button>
-      </div>
+  <button id="toggleReviewPanel" class="ghost">✏️ Write a Review</button>
 
-      <textarea id="comment" placeholder="Optional comment (public)"></textarea>
-
-      <div style="height:12px"></div>
-
-      <div style="display:flex;gap:12px;align-items:center">
-        <div><div class="avg" id="avgScore">—</div> <div class="small">avg</div></div>
-        <div class="small" id="ratingCount">— ratings</div>
-        <div style="flex:1"></div>
-        <button id="deleteMovie" class="ghost">Delete movie (admin)</button>
-      </div>
-
-      <div style="height:12px"></div>
-      <div id="breakdown" class="small"></div>
+  <div id="reviewPanel" style="display:none;margin-top:12px">
+    <div style="display:flex;gap:8px;align-items:center;margin-bottom:10px">
+      <div class="small">Your rating:</div>
+      <div id="ratingStars" class="stars" role="radiogroup" aria-label="Rating stars"></div>
+      <div style="flex:1"></div>
+      <button id="submitRatingBtn">Submit</button>
     </div>
+
+    <textarea id="comment" placeholder="Optional comment (public)"></textarea>
+  </div>
+
+  <div style="height:12px"></div>
+
+  <div style="display:flex;gap:12px;align-items:center">
+    <div><div class="avg" id="avgScore">—</div> <div class="small">avg</div></div>
+    <div class="small" id="ratingCount">— ratings</div>
+    <div style="flex:1"></div>
+    <button id="deleteMovie" class="ghost">Delete movie (admin)</button>
+  </div>
+
+  <div style="height:12px"></div>
+  <div id="breakdown" class="small"></div>
+</div>
   </main>
 
   <!-- Right column -->
@@ -247,6 +256,15 @@ const refs = {
   topRaters: document.getElementById('topRaters'),
   signedInAs: document.getElementById('signedInAs'),
 };
+
+const reviewPanel = document.getElementById('reviewPanel');
+const toggleReviewPanel = document.getElementById('toggleReviewPanel');
+
+toggleReviewPanel.addEventListener('click', () => {
+  const isOpen = reviewPanel.style.display === 'block';
+  reviewPanel.style.display = isOpen ? 'none' : 'block';
+  toggleReviewPanel.textContent = isOpen ? '✏️ Write a Review' : '⬆️ Hide Review Form';
+});
 
 /* -------------------------
    App state
@@ -528,6 +546,28 @@ function updateSelectedStats(movieId, ratingsVal) {
   }
   html += '</div>';
   refs.breakdown.innerHTML = html;
+
+  // Show all reviews with comments
+const listEl = document.getElementById('reviewsList');
+if (!ratingsVal || Object.keys(ratingsVal).length === 0) {
+  listEl.innerHTML = '<div class="small" style="opacity:0.7">No reviews yet — be the first to write one!</div>';
+  return;
+}
+let htmlReviews = '';
+const sorted = Object.values(ratingsVal).sort((a,b)=> new Date(b.createdAt) - new Date(a.createdAt));
+for (const r of sorted) {
+  htmlReviews += `
+    <div style="margin-bottom:10px;padding:10px;border-radius:10px;background:rgba(255,255,255,0.03)">
+      <div style="display:flex;justify-content:space-between;align-items:center">
+        <strong>${escapeHtml(r.displayName || r.email || 'Anonymous')}</strong>
+        <span class="badge">${r.score}/10</span>
+      </div>
+      ${r.comment ? `<div class="small" style="margin-top:4px;opacity:0.85">${escapeHtml(r.comment)}</div>` : ''}
+      <div class="small" style="margin-top:4px;opacity:0.6">${new Date(r.createdAt).toLocaleString()}</div>
+    </div>
+  `;
+}
+listEl.innerHTML = htmlReviews;
 }
 
 /* Submit rating — update if existing */
