--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@
   .right{min-width:320px}
   .top-raters .rater{display:flex;align-items:center;gap:10px;padding:8px;border-radius:8px}
   .avatar{width:44px;height:44px;border-radius:8px;background:linear-gradient(135deg,#111827,#0b1220);display:inline-grid;place-items:center;font-weight:800;color:var(--muted)}
-  footer{grid-column:1 / -1;text-align:center;margin-top:12px;color:var(--muted);font-size:13px}
+  footer {
+  grid-column: 1 / -1;
+  text-align: center;
+  margin-top: 40px;
+  padding: 20px 0;
+  color: var(--muted);
+  font-size: 13px;
+  background: linear-gradient(180deg, transparent, rgba(0,0,0,0.25));
+}
   .badge{background:rgba(255,255,255,0.06);padding:4px 8px;border-radius:999px;font-weight:700;font-size:12px;color:#d9f7ff}
   @media (max-width:980px){.wrap{grid-template-columns:1fr;padding:12px}.right{order:3}}
 
@@ -110,11 +118,8 @@
       </div>
 
       <div class="movie-list" id="movieList" aria-live="polite"></div>
-    </div>
 
-    <div style="height:12px"></div>
-
-    <div class="card" id="selectedCard" aria-hidden="true" style="display:none">
+      <div class="card" id="selectedCard" aria-hidden="true" style="display:none">
   <strong id="selectedTitle">Selected</strong>
   <div class="small" id="selectedSubtitle">Movie info</div>
   <div style="height:12px"></div>
@@ -147,6 +152,9 @@
   <div style="height:12px"></div>
   <div id="breakdown" class="small"></div>
 </div>
+    </div>
+
+    <div style="height:12px"></div>
   </main>
 
   <!-- Right column -->
@@ -481,33 +489,71 @@ async function selectMovie(id) {
   const m = snap.val();
   if (!m) return;
 
-  refs.selectedCard.style.display = '';
-  refs.selectedCard.setAttribute('aria-hidden', 'false');
-  refs.selectedTitle.textContent = m.title + (m.year ? ' (' + m.year + ')' : '');
-  refs.selectedSubtitle.textContent = 'Added ' + new Date(m.createdAt).toLocaleString();
+  // Remove any previous selected card placement
+  document.querySelectorAll('.selected-insert').forEach(e => e.remove());
+
+  // Find the clicked movie’s DOM element
+  const clickedMovie = Array.from(refs.movieList.children)
+    .find(el => el.querySelector('.movie-title')?.textContent?.includes(m.title));
+
+  // Create a new card element to inject below it
+  const card = document.createElement('div');
+  card.className = 'card selected-insert';
+  card.innerHTML = `
+    <strong>${escapeHtml(m.title)} ${m.year ? '(' + escapeHtml(m.year) + ')' : ''}</strong>
+    <div class="small">Added ${new Date(m.createdAt).toLocaleString()}</div>
+    <div style="height:12px"></div>
+    <div id="reviewsList"></div>
+    <div style="height:12px"></div>
+    <button id="toggleReviewPanel" class="ghost">✏️ Write a Review</button>
+    <div id="reviewPanel" style="display:none;margin-top:12px">
+      <div style="display:flex;gap:8px;align-items:center;margin-bottom:10px">
+        <div class="small">Your rating:</div>
+        <div id="ratingStars" class="stars" role="radiogroup" aria-label="Rating stars"></div>
+        <div style="flex:1"></div>
+        <button id="submitRatingBtn">Submit</button>
+      </div>
+      <textarea id="comment" placeholder="Optional comment (public)"></textarea>
+    </div>
+    <div style="height:12px"></div>
+    <div style="display:flex;gap:12px;align-items:center">
+      <div><div class="avg" id="avgScore">—</div><div class="small">avg</div></div>
+      <div class="small" id="ratingCount">— ratings</div>
+      <div style="flex:1"></div>
+      <button id="deleteMovie" class="ghost">Delete movie (admin)</button>
+    </div>
+    <div style="height:12px"></div>
+    <div id="breakdown" class="small"></div>
+  `;
+  clickedMovie.insertAdjacentElement('afterend', card);
+
+  // Update refs to new dynamically inserted elements
+  refs.ratingStars = card.querySelector('#ratingStars');
+  refs.comment = card.querySelector('#comment');
+  refs.avgScore = card.querySelector('#avgScore');
+  refs.ratingCount = card.querySelector('#ratingCount');
+  refs.breakdown = card.querySelector('#breakdown');
+  refs.deleteMovieBtn = card.querySelector('#deleteMovie');
+  const reviewPanel = card.querySelector('#reviewPanel');
+  const toggleReviewPanel = card.querySelector('#toggleReviewPanel');
+  const submitRatingBtn = card.querySelector('#submitRatingBtn');
+
+  toggleReviewPanel.addEventListener('click', () => {
+    const isOpen = reviewPanel.style.display === 'block';
+    reviewPanel.style.display = isOpen ? 'none' : 'block';
+    toggleReviewPanel.textContent = isOpen ? '✏️ Write a Review' : '⬆️ Hide Review Form';
+  });
 
   attachRatingsListener(id);
 
-  // ⬇️ Fetch existing ratings
   const ratingsSnap = await get(ratingsRoot(id));
-
-  // ✅ PREVENT DUPLICATE RATINGS HERE
   const ratings = ratingsSnap.val() || {};
   const existing = Object.values(ratings).find(r => r.uid === currentUser?.uid);
 
-  if (existing) {
-    pendingRating = existing.score;
-    refs.comment.value = existing.comment || '';
-  } else {
-    pendingRating = 8; // default
-    refs.comment.value = '';
-  }
-
-  // Re-render stars showing either existing rating or default
+  pendingRating = existing ? existing.score : 8;
+  refs.comment.value = existing ? existing.comment || '' : '';
   renderStars(refs.ratingStars, v => pendingRating = v, pendingRating);
-
-  // Finally update stats
-  updateSelectedStats(id, ratingsSnap.val());
+  updateSelectedStats(id, ratings);
 }
 
 /* Stars widget */
