--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width,initial-scale=1" />
       <title>Movie Ratings</title>
-      <meta name="description" content="MovieRatings — verified user movie rating platform (Firebase + GitHub Pages)" />
+      <link rel="icon" type="image/png" href="/images/Favicon.png">
+      <meta name="description" content="Movie Ratings — verified user movie rating platform" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
       <style>
